--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,6 @@ include:
 
 variables:
   PLAN: plan.tfplan
+  TF_IN_AUTOMATION: "true"
   AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}' 
-  AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}' 
-  AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION}'
+  AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}'
