--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ include:
 managed-apps:
   stage: deploy-apps
   image: "registry.gitlab.com/gitlab-org/cluster-integration/cluster-applications:v0.8.0"
+  before_script:
   environment:
     name: eks/production
   variables:
