--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ managed-apps:
   stage: deploy-apps
   image: "registry.gitlab.com/gitlab-org/cluster-integration/cluster-applications:v0.8.0"
   before_script:
+    - helm --version
   environment:
     name: eks/production
   variables:
