--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,20 @@
 include:
   - project: 'gitops-demo/infra/templates'
     file: '/terraform.gitlab-ci.yml'
+
+.secrets:
+  secrets:
+    AWS_ACCESS_KEY_ID_FILE:
+      vault: infrastructure/aws/AWS_ACCESS_KEY_ID@secret
+    AWS_SECRET_ACCESS_KEY_FILE:
+      vault: infrastructure/aws/AWS_SECRET_ACCESS_KEY@secret
+    AWS_REGION_FILE:
+      vault: infrastructure/aws/AWS_REGION@secret
+    GITLAB_TOKEN_FILE:
+      vault: infrastructure/gitlab/GITLAB_TOKEN@secret
+
+before_script:
+  - export AWS_ACCESS_KEY_ID=$(cat $AWS_ACCESS_KEY_ID_FILE)
+  - export AWS_SECRET_ACCESS_KEY=$(cat $AWS_SECRET_ACCESS_KEY_FILE)
+  - export AWS_REGION=$(cat $AWS_REGION_FILE)
+  - export GITLAB_TOKEN=$(cat $GITLAB_TOKEN_FILE)
