--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,3 +18,8 @@ include:
       vault: infrastructure/gitlab/GITLAB_TOKEN@secret
       file: false
 
+build:
+  extends: [.secrets, .terraform:build]
+
+deploy:
+  extends: [.secrets, .terraform:deploy]
