--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 include:
   - project: 'gitops-demo/infra/templates'
+    ref: 9-move-to-open-tofu 
     file: '/terraform.gitlab-ci.yml'
 
 .secrets:
